--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=EnfoMe
 APP_ENV=local
 APP_KEY=base64:3xRBrwfmx+W2/4BgP6S5NjwdWiyWKc4q5x9hST2Mz1o=
 APP_DEBUG=true
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=dev.enfome.info
+MAIL_PORT=465
+MAIL_USERNAME=dev@enfome.info
+MAIL_PASSWORD="3nf0m33nf0m3"
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=dev@enfome.info
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
