--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.2",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
@@ -22,5 +23,11 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.8.0",
+        "lib-jitsi-meet-dist": "^2.1.0",
+        "pusher-js": "^6.0.3",
+        "vue-axios": "^2.1.5"
     }
 }
