--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "devDependencies": {
         "axios": "^0.19.2",
         "babel-plugin-transform-class-properties": "^6.24.1",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.5.2",
         "cross-env": "^7.0",
-        "jquery": "^3.2",
+        "jquery": "^3.5.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
@@ -25,9 +25,10 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "laravel-echo": "^1.8.0",
+        "laravel-echo": "^1.8.1",
         "lib-jitsi-meet-dist": "^2.1.2",
         "pusher-js": "^6.0.3",
+        "sweetalert": "^2.1.2",
         "vue-axios": "^2.1.5"
     }
 }
